Pom.xml updated

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    	<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
+    	<maven.compile.encoding>UTF-8</maven.compile.encoding>
 	</properties>
 
 	<dependencies>
